spectec/test/elab/neg/parse-stray-non-ascii-char.spectec
;; A non-ASCII Unicode character appears where a token is expected.

α
